--- a/style.css
+++ b/style.css
@@ -89,4 +89,77 @@ main {
   align-items: center;
   height: 5vh;
   padding-right: 55%;
+}
+
+@media (min-width: 200px) and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    height: 32vh;
+    width: 100%;
+  }
+  header img {
+    width: 80%;
+    height: 30vh;
+    padding-left: 10%;
+  }
+  header section {
+    width: 100%;
+    height: 25vh;
+  }
+  header section .botaoVermelho {
+    width: 50%;
+  }
+  header section .botaoPreto {
+    width: 30%;
+  }
+  .tituloEpisodios {
+    width: 100%;
+    height: 22vh;
+    border-bottom: solid 1px rgb(243, 242, 242);
+  }
+  .tituloEpisodios section {
+    width: 100%;
+    height: 18vh;
+    margin-left: 2%;
+  }
+  .tituloEpisodios section h2 {
+    width: 100%;
+    font-size: 70%;
+    height: 7vh;
+  }
+  .tituloEpisodios img {
+    width: 30%;
+  }
+  main {
+    height: 180vh;
+  }
+  .episodios {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 30vh;
+    padding: 5%;
+  }
+  .episodios .cada-episodio {
+    height: 80vh;
+    width: 100%;
+    margin-bottom: 5%;
+  }
+  .episodios .cada-episodio p {
+    width: 100%;
+  }
+  footer {
+    width: 100%;
+  }
+  footer .rodape {
+    height: 18vh;
+    flex-direction: column;
+    align-items: center;
+  }
+  footer .rodape p {
+    text-align: center;
+    width: 70vw;
+    margin-left: 12rem;
+  }
 }/*# sourceMappingURL=style.css.map */
