--- a/style.scss
+++ b/style.scss
@@ -104,3 +104,96 @@ main{
     padding-right: 55%;
 
 }
+
+@media (min-width: 200px) and (max-width: 768px) {
+    
+    header{
+        flex-direction: column;
+        height: 32vh;
+        width: 100%;
+
+        img{
+            width: 80%;
+            height: 30vh;
+            padding-left: 10%;
+        }
+
+        section{
+            width: 100%;
+            height: 25vh;
+
+            .botaoVermelho{
+                width: 50%;
+            }
+
+            .botaoPreto{
+                width: 30%;
+            }
+        }
+    }
+
+    .tituloEpisodios{
+        width: 100%;
+        height: 22vh;
+        border-bottom: solid 1px rgb(243, 242, 242);
+
+        section{
+            width: 100%;
+            height: 18vh;
+            margin-left: 2%;
+            
+
+            h2{
+                width: 100%;
+                font-size: 70%;
+                height: 7vh;
+            }
+
+        }
+
+        img{
+            width: 30%;
+        }
+    }
+
+    main{
+          height: 180vh;
+    }
+
+    .episodios{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 30vh;
+        padding: 5%;
+
+        .cada-episodio{
+            height: 80vh;
+            width: 100%;
+            margin-bottom: 5%;
+
+            p{
+                width: 100%;                
+            }
+        }
+    }
+
+    footer{
+        width: 100%;
+        
+        .rodape{
+            height: 18vh;
+            flex-direction: column;
+            align-items: center;
+
+            p{
+                text-align: center;
+                width: 70vw;
+                margin-left: 12rem;
+            }
+        }
+
+    }
+    
+}
